--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -28,7 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <!--Email-->
     <EditText
         android:id="@+id/email_input"
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--password -->
+    <!--Password-->
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
@@ -70,25 +70,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_input" />
 
+    <!--Login-->
     <Button
+        android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:background="@drawable/rounded_text_box"
+        android:backgroundTint="@color/white"
         android:textColor="@color/black"
+        android:padding="16dp"
+
 
         android:layout_marginTop="19dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
 
         app:layout_constraintTop_toBottomOf="@+id/password_input"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
 
         />
 
+    <!--New to txt-->
+    <TextView
+        android:id="@+id/new_to_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New to MyGameList?"
+        android:textColor="@color/white"
+
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="100dp"
 
 
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintEnd_toStartOf="@+id/sign_up_txt"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+
+    <!--Signup URL-->
+    <TextView
+        android:id="@+id/sign_up_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign up"
+        android:textColor="@color/azul"
+
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="100dp"
+
+
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintStart_toEndOf="@id/new_to_txt"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        />
 
 
 
