--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -10,9 +10,9 @@
     tools:context=".ui.login_Activity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="419dp"
-        android:layout_height="740dp"
+        android:id="@+id/curva_fondo"
+        android:layout_width="415dp"
+        android:layout_height="738dp"
 
         android:src="@drawable/fondo_login"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,10 +20,10 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:layout_width="198dp"
-        android:layout_height="198dp"
+        android:layout_width="210dp"
+        android:layout_height="210dp"
         android:src="@drawable/logo_txt_claro"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,15 +33,17 @@
         android:id="@+id/email_input"
         android:layout_width="match_parent"
         android:layout_height="53dp"
-        android:layout_marginTop="310dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
         android:hint="Email"
         android:textColorHint="@color/gris_claro"
         android:textColor="@color/gris_claro"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:background="@drawable/rounded_text_box"
         android:paddingStart="40dp"
+        android:paddingEnd="55dp"
+
 
 
         app:layout_constraintBottom_toTopOf="@+id/password_input"
@@ -49,26 +51,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--email icon-->
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/icon_email"
+
+        app:layout_constraintBottom_toBottomOf="@+id/email_input"
+        app:layout_constraintEnd_toEndOf="@+id/email_input"
+        app:layout_constraintHorizontal_bias="0.913"
+        app:layout_constraintStart_toStartOf="@+id/email_input"
+        app:layout_constraintTop_toTopOf="@+id/email_input" />
+
     <!--Password-->
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_marginTop="19dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
         android:hint="Password"
         android:textColorHint="@color/gris_claro"
         android:textColor="@color/gris_claro"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:background="@drawable/rounded_text_box"
         android:paddingStart="40dp"
+        android:paddingEnd="55dp"
 
 
-        app:layout_constraintBottom_toBottomOf=""
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_input" />
+        app:layout_constraintTop_toBottomOf="@+id/email_input"
+        app:layout_constraintBottom_toTopOf="@+id/login_button" />
+
+    <!--Password icon-->
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/icon_lock"
+
+        app:layout_constraintBottom_toBottomOf="@+id/password_input"
+        app:layout_constraintEnd_toEndOf="@+id/password_input"
+        app:layout_constraintHorizontal_bias="0.913"
+        app:layout_constraintStart_toStartOf="@+id/password_input"
+        app:layout_constraintTop_toTopOf="@+id/password_input" />
 
     <!--Login-->
     <Button
@@ -83,8 +111,8 @@
 
 
         android:layout_marginTop="19dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
 
         app:layout_constraintTop_toBottomOf="@+id/password_input"
         app:layout_constraintEnd_toEndOf="parent"
