--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -162,36 +162,36 @@
 
     <!--New to txt-->
     <TextView
-        android:id="@+id/new_to_txt"
+        android:id="@+id/already_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account?"
         android:textColor="@color/white"
 
         android:layout_marginTop="70dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="90dp"
 
 
         app:layout_constraintTop_toBottomOf="@+id/login_button"
-        app:layout_constraintEnd_toStartOf="@+id/sign_up_txt"
+        app:layout_constraintEnd_toStartOf="@+id/login_txt"
         app:layout_constraintStart_toStartOf="parent"
 
         />
 
     <!--Signup URL-->
     <TextView
-        android:id="@+id/sign_up_txt"
+        android:id="@+id/login_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textColor="@color/azul"
 
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="90dp"
 
 
         app:layout_constraintTop_toBottomOf="@+id/login_button"
-        app:layout_constraintStart_toEndOf="@id/new_to_txt"
+        app:layout_constraintStart_toEndOf="@id/already_txt"
         app:layout_constraintEnd_toEndOf="parent"
 
         />
