Iconos de la barra de navegacion inferior y nuevo color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="gris_oscuro">#707070</color>
     <color name="transparente">#00FFFFFF</color>
     <color name="azul">#35C2FF</color>
+    <color name="moradoNavegacion">#282D4B</color>
 
 </resources>
