--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyGameList" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.MyGameList" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/azul</item>
+        <item name="colorPrimaryVariant">@color/moradoNavegacion</item>
+        <item name="colorOnPrimary">@color/moradoNavegacion</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -27,4 +27,6 @@
         <!-- Status bar color. -->
         <!-- Customize your theme here. -->
     </style>
+
+
 </resources>
