--- a/app/src/main/res/drawable/icon_home_filled.xml
+++ b/app/src/main/res/drawable/icon_home_filled.xml
@@ -1,5 +1,13 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:alpha="0.8" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:alpha="0.8"
+    android:height="24dp"
+    android:tint="#FFFFFF"
+    android:viewportHeight="24"
+    android:viewportWidth="24"
+    android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M12,3L4,9v12h5v-7h6v7h5V9z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,3L4,9v12h5v-7h6v7h5V9z"/>
     
 </vector>
