--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,10 +51,11 @@
     <ImageView
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:src="@drawable/icon_account_circle"
+        android:src="@drawable/icon_account_circle_80"
 
         android:layout_marginEnd="25dp"
 
+        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/top_bar"
         app:layout_constraintTop_toTopOf="@+id/top_bar"/>
@@ -81,6 +82,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_bar"
         app:layout_constraintVertical_bias="1.0"
 
         app:navGraph="@navigation/mobile_navigation" />
