--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -124,7 +124,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_input"
-        app:layout_constraintBottom_toTopOf="@+id/login_button" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_button" />
 
     <!--Password icon-->
     <ImageView
@@ -140,7 +140,7 @@
 
     <!--Login-->
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/signup_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign in"
@@ -172,7 +172,7 @@
         android:layout_marginStart="90dp"
 
 
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/signup_button"
         app:layout_constraintEnd_toStartOf="@+id/login_txt"
         app:layout_constraintStart_toStartOf="parent"
 
@@ -190,7 +190,7 @@
         android:layout_marginEnd="90dp"
 
 
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/signup_button"
         app:layout_constraintStart_toEndOf="@id/already_txt"
         app:layout_constraintEnd_toEndOf="parent"
 
