--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,4 +87,20 @@
 
         app:navGraph="@navigation/mobile_navigation" />
 
+
+
+    <!--Texto de prueba-->
+    <TextView
+        android:id="@+id/text_prueba"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="90dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="@color/azul"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
