--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="transparente">#00FFFFFF</color>
     <color name="azul">#35C2FF</color>
     <color name="moradoNavegacion">#282D4B</color>
+    <color name="morado_busqueda">#19215A</color>
 
 </resources>
