--- a/app/src/main/res/layout/item_search_games.xml
+++ b/app/src/main/res/layout/item_search_games.xml
@@ -1,25 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/img_portada"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="8dp"
+    card_view:cardBackgroundColor="@color/transparente"
+    card_view:cardElevation="0dp">
 
-    <TextView
-        android:id="@+id/text_Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="nombre del jueguito"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/img_portada"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/img_portada"
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/text_Name"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle ="bold"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            tools:text="nombre del jueguito"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/img_portada"/>
+
+        <TextView
+            android:id="@+id/text_title_synopsis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:text="synopsis"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            app:layout_constraintStart_toEndOf="@id/img_portada"
+            app:layout_constraintTop_toBottomOf="@id/text_Name" />
+
+        <me.biubiubiu.justifytext.library.JustifyTextView
+            android:id="@+id/text_synopsis"
+            android:layout_width="185dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/gris_claro"
+            android:textSize="11sp"
+            android:maxLines="6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/img_portada"
+            app:layout_constraintTop_toBottomOf="@id/text_title_synopsis" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
+
