Motor de filtrado terminado

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -35,6 +35,9 @@
         android:textColor="@color/gris_claro"
         android:hint="Search Games"
         android:textSize="12dp"
+        android:maxLines="1"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:paddingStart="45dp"
         android:paddingEnd="55dp"
         app:layout_constraintEnd_toEndOf="parent"
