--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_search"
         android:icon="@drawable/icon_search"
         android:title="Search" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_mylist"
         android:icon="@drawable/icon_format_list_bulleted"
         android:title="MyList" />
 
