--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,16 +12,22 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_search"
         android:name="com.example.mygamelist.ui.dashboard.SearchFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_navigation_search_to_navigation_game"
+            app:destination="@id/navigation_game"
+            app:popUpTo="@id/navigation_search" />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_mylist"
         android:name="com.example.mygamelist.ui.notifications.MyListFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_mylist" />
+
     <fragment
         android:id="@+id/navigation_game"
         android:name="com.example.mygamelist.GameFragment"
