--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".GameFragment">
+
+    <ImageView
+        android:id="@+id/back_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/icon_atras"
+        app:layout_constraintBottom_toTopOf="@id/portada"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:layout_marginTop="25dp"
+        android:textColor="@color/gris_claro"
+        app:layout_constraintStart_toEndOf="@+id/back_icon"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/portada"
@@ -15,7 +37,7 @@
         android:layout_marginStart="20dp"
         android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_icon"
         app:layout_constraintBottom_toTopOf="@id/txt_gameName"/>
 
     <TextView
@@ -26,7 +48,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/portada"
@@ -40,7 +62,7 @@
         android:layout_marginTop="20dp"
         android:text="Synopsis"
         android:textColor="@color/white"
-        android:textSize="11dp"
+        android:textSize="11sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_gameName" />
@@ -54,7 +76,7 @@
         android:layout_marginEnd="20dp"
         android:maxLines="6"
         android:textColor="@color/gris_claro"
-        android:textSize="11dp"
+        android:textSize="11sp"
         android:padding="10dp"
         android:background="@drawable/rounded_text_box_purple"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +84,5 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_titleSynopsisGame"
         tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"/>
-
-"
 
 </androidx.constraintlayout.widget.ConstraintLayout>
