--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -35,7 +35,6 @@
         android:layout_height="213dp"
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
-        android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_icon"
         app:layout_constraintBottom_toTopOf="@id/txt_gameName"/>
@@ -70,19 +69,18 @@
     <TextView
         android:id="@+id/text_synopsis"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:maxLines="6"
         android:textColor="@color/gris_claro"
         android:textSize="11sp"
         android:padding="10dp"
+        android:gravity="center"
         android:background="@drawable/rounded_text_box_purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_titleSynopsisGame"
-        tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"/>
+        tools:text=""/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
