--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -33,11 +33,25 @@
         android:id="@+id/portada"
         android:layout_width="162dp"
         android:layout_height="213dp"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toTopOf="@id/txt_gameName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_icon"
-        app:layout_constraintBottom_toTopOf="@id/txt_gameName"/>
+        app:layout_constraintTop_toBottomOf="@id/back_icon" />
+
+    <TextView
+        android:id="@+id/txt_fecha"
+        android:layout_width="162dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:text="Synopsis"
+        android:textColor="@color/gris_claro"
+        android:textSize="11sp"
+        tools:text="fecha"
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/txt_gameName" />
+
 
     <TextView
         android:id="@+id/txt_gameName"
@@ -52,6 +66,87 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/portada"
         tools:text="nombre del jueguitooooooooooooooooooooo" />
+
+
+    <TextView
+        android:id="@+id/textPlatform"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:text="Platforms"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/plat1"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:padding="5dp"
+
+        app:layout_constraintEnd_toStartOf="@id/plat2"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/textPlatform"
+        tools:text="plataforma" />
+
+    <TextView
+        android:id="@+id/plat2"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:padding="5dp"
+
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:gravity="center"
+
+        app:layout_constraintStart_toEndOf="@+id/plat1"
+        app:layout_constraintTop_toBottomOf="@+id/textPlatform"
+        app:layout_constraintEnd_toStartOf="@id/plat3"
+        tools:text="plataforma" />
+
+    <TextView
+        android:id="@+id/plat3"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:gravity="center"
+        android:background="@drawable/rounded_text_box_purple"
+        android:padding="5dp"
+
+        tools:text="plataforma"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/plat2"
+        app:layout_constraintTop_toBottomOf="@+id/textPlatform" />
+
+    <TextView
+        android:id="@+id/plat4"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:background="@drawable/rounded_text_box_purple"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        android:layout_marginTop="10dp"
+        android:padding="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toEndOf="@+id/portada"
+        app:layout_constraintTop_toBottomOf="@+id/plat1"
+        tools:text="plataforma" />
+
 
     <TextView
         android:id="@+id/txt_titleSynopsisGame"
