Navegacion a fragment perfil

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,12 @@
         android:id="@+id/navigation_home"
         android:name="com.example.mygamelist.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_profileFragment"
+            app:destination="@id/navigation_profile"
+            app:popUpTo="@id/navigation_home" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_search"
@@ -38,5 +43,10 @@
             android:name="videojuego"
             app:argType="com.example.mygamelist.Videojuego" />
     </fragment>
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.mygamelist.ui.home.ProfileFragment"
+        android:label="ProfileFragment" />
 
 </navigation>
