--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -44,7 +44,7 @@
         android:textColor="@color/gris_claro"
         android:textColorHint="@color/gris_claro"
         android:textSize="13sp"
-
+        android:maxLength="15"
 
         app:layout_constraintBottom_toTopOf="@+id/email_input"
         app:layout_constraintEnd_toEndOf="parent"
