--- a/app/src/main/res/layout/dialog_nickname_change.xml
+++ b/app/src/main/res/layout/dialog_nickname_change.xml
@@ -10,6 +10,7 @@
         android:id="@+id/editNicknameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLength="15"
         android:hint="Write your new nickname" />
 
 </LinearLayout>
