--- a/app/src/main/res/layout/item_search_games.xml
+++ b/app/src/main/res/layout/item_search_games.xml
@@ -54,12 +54,15 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="8dp"
+            android:maxLines="6"
             android:textColor="@color/gris_claro"
             android:textSize="11sp"
-            android:maxLines="6"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/img_portada"
-            app:layout_constraintTop_toBottomOf="@id/text_title_synopsis" />
+            app:layout_constraintTop_toBottomOf="@id/text_title_synopsis"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
